feat: issue 19 and ux improvements
